Pagina final para subir

--- a/pages/hosp_vet.html
+++ b/pages/hosp_vet.html
@@ -432,7 +432,7 @@
                                 <a href="#"><i class="fal fa-shopping-cart"></i></a>
                             </div>
                             <div class="pro">
-                                <img src="../img/VETproductos/Cardio VET-20" alt="">
+                                <img src="../img/VETproductos/proximamente.png" alt="">
                                 <div class="des">
                                     <span>LARINGOSCOPIO</span>
                                     <h5>TOOTOO MEDITECH</h5>
@@ -456,7 +456,7 @@
                                 <a href="#"><i class="fal fa-shopping-cart"></i></a>
                             </div>
                             <div class="pro">
-                                <img src="../img/VETproductos/Cardio VET-3" alt="">
+                                <img src="../img/VETproductos/proximamente.png" alt="">
                                 <div class="des">
                                     <span>OTOSCOPIO</span>
                                     <h5>TOOTOO MEDITECH</h5>
@@ -477,7 +477,7 @@
                                 <a href="#"><i class="fal fa-shopping-cart"></i></a>
                             </div>
                             <div class="pro">
-                                <img src="/img/VETproductos/CARDIO VET-40" alt="">
+                                <img src="../img/VETproductos/proximamente.png" alt="">
                                 <div class="des">
                                     <span>FONENDOSCOPIO</span>
                                     <h5>TOOTOO MEDITECH</h5>
