--- a/pages/humano.html
+++ b/pages/humano.html
@@ -18,6 +18,12 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
+    <!--WHATSAPP-->
+    <section>
+        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
+        </a>
+    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -105,7 +111,7 @@
             </div>
             <div class="texto__cuerpo col-lg  d-flex justify-content-center pt-5">
                 <div class="sub__texto col-lg ">
-                    <h3>Los mejores equipos medicos</h3>
+                    <h3>Equipos médicos especializados</h3>
                     <p>Taichi Holdings SAS continua con su proposito de aportar de manera activa a la renovacion tecnologica de las diferentes areas medicas que posee el mercado Colombiano.
                         En esta ocacion presentamos nuestro portafolio de linea medicina humana el cual ofrece productos ajustados a todas las necesidades del area humana y sus avances tecnologicos
                         </p>  
