--- a/pages/odont__piezasm.html
+++ b/pages/odont__piezasm.html
@@ -20,6 +20,12 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
+    <!--WHATSAPP-->
+    <section>
+        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
+        </a>
+    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -75,7 +81,7 @@
                 <img src="../img/HUMproducto/KIT_CON_PANAMAX_PLUS_Y1003026-removebg-preview.png" alt="">
                 <div class="des">
                     <span>Panamax PLUS</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -93,7 +99,7 @@
                 <img src="../img/HUMproducto/KIT_PROFESIONAL_PANAMAX2_Y1002910-removebg-preview.png" alt="">
                 <div class="des">
                     <span>Panamax 2</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -111,7 +117,7 @@
                 <img src="../img/HUMproducto/KIT_PROFESIONAL_PANAMAX_2_FX22_REF.Y1003758-removebg-preview.png" alt="">
                 <div class="des">
                     <span>Panamax 2 FX22</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -128,7 +134,7 @@
                 <img src="../img/HUMproducto/KIT_PROFESIONAL_PANAMAX_2R_+_FX22_+_ESCALE_AS2000_REF.Y1003756-removebg-preview.png" alt="">
                 <div class="des">
                     <span>Panamax 2 R2</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -145,7 +151,7 @@
                 <img src="../img/HUMproducto/pieza-de-mano-panamax-2r-430x430.jpeg" alt="">
                 <div class="des">
                     <span>Panamax 2R</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -165,7 +171,7 @@
                 <img src="../img/HUMproducto/pieza-de-mano--430x430.jpeg" alt="">
                 <div class="des">
                     <span>Panamax X2</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -182,7 +188,7 @@
                 <img src="../img/HUMproducto/pieza-de-mano-dynaled-m500lg-b2-mini-p1107-430x430.jpeg" alt="">
                 <div class="des">
                     <span>Dynaled M500LG</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -200,7 +206,7 @@
                 <img src="../img/HUMproducto/pieza-de-mano-dynaled-m500lg-b2-mini-p1107-430x430.jpeg" alt="">
                 <div class="des">
                     <span>Dynaled M600LG B2</span>
-                    <h5>SNK</h5>
+                    <h5>NSK</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
