--- a/pages/veterinario.html
+++ b/pages/veterinario.html
@@ -97,12 +97,12 @@
             </a>
             </div>
             <div class="col-lg"  >
-                <a href="./ciru_vet.html" style="text-decoration: none;">
+                <a href="#" style="text-decoration: none;">
                 <button class="boton dos"><span>Terapia</span></button>
                 </a>
             </div>
             <div class="col-lg"  >
-            <a href="./ciru_vet.html" style="text-decoration: none;">
+            <a href="#" style="text-decoration: none;">
                 <button class="boton dos"><span>Mobiliario</span></button>
             </a>
             </div>
