--- a/pages/odontologia.html
+++ b/pages/odontologia.html
@@ -20,6 +20,12 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
+    <!--WHATSAPP-->
+    <section>
+        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
+        </a>
+    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -102,8 +108,8 @@
             </div>
             <div class="texto__cuerpo col-lg  d-flex justify-content-center pt-5">
                 <div class="sub__texto col-lg ">
-                    <h3>Los mejores equipos medicos para odontologia</h3>
-                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil alias labore ipsa praesentium nobis cumque ipsam sunt atque quis earum, voluptatibus voluptates minus repudiandae sequi qui similique aut aliquid laboriosam.</p>  
+                    <h3>Los mejores equipos médicos para odontología</h3>
+                    <p>Contamos con una gran experiencia, respaldo clínico y técnico para brindarte soluciones completas a tus necesidades.</p>  
                 </div>
             </div>
         </div>
