--- a/pages/sim_paciente.html
+++ b/pages/sim_paciente.html
@@ -20,6 +20,12 @@
     <link rel="icon" href="../img/logotaichi.ico">
 </head>
 <body>
+    <!--WHATSAPP-->
+    <section>
+        <a href="https://api.whatsapp.com/send?phone=573160405630" class="btn-wsp" target="_blank">
+            <img class="iconoWp" src="../img/whatsapp.png" alt="">
+        </a>
+    </section>
     <header>
         <!--BARRA DE NAVEGACION-->
         <div class="barra_nav">
@@ -213,7 +219,6 @@
             </div>
         </div>
     </section>
- 
 <!--FOOTER-->
 <footer>
     <section class="footer_info">
