Final subido al dominio

--- a/pages/humano.html
+++ b/pages/humano.html
@@ -45,7 +45,7 @@
                         <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./humano.html">Medicina Humana</a></li>
                         <li><a class="dropdown-item" href="./veterinario.html">Medicina Veterinaria</a></li>
-                        <li><a class="dropdown-item " href="./odontologia.html">Odontología</a></li>
+                        <li><a class="dropdown-item" href="./odontologia.html">Odontología</a></li>
                         <li><a class="dropdown-item" href="./simulacion.html">Simulación</a></li>
                         <li><a class="dropdown-item" href="./soporte.html">Soporte técnico</a></li>
                         </ul>
@@ -107,7 +107,7 @@
     <section>
         <div class="row">
             <div class="col-lg d-flex justify-content-center imagen__cuerpo pb-5 pt-5">
-                <img src="../img/ankeCT.jpeg" width="400px" heigh="400px" alt="">
+                <img src="../img/ankect.jpeg" width="400px" heigh="400px" alt="">
             </div>
             <div class="texto__cuerpo col-lg  d-flex justify-content-center pt-5">
                 <div class="sub__texto col-lg ">
