--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg navbar-right">
                 <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./img/logotaichi.png" width="200px" alt=""></a>
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="./img/homeicon.png" alt=""></a>
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="/img/homeicon.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,8 +44,8 @@
                         LINEAS DE PRODUCTO
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./pages/humano.html">Medicina Humana</a></li>
-                        <li><a class="dropdown-item" href="./pages/veterinario.html">Medicina Veterinaria</a></li>
+                        <li><a class="dropdown-item" href="/pages/humano.html">Medicina Humana</a></li>
+                        <li><a class="dropdown-item" href="/pages/veterinario.html">Medicina Veterinaria</a></li>
                         <li><a class="dropdown-item " href="./pages/odontologia.html">Odontología</a></li>
                         <li><a class="dropdown-item" href="./pages/simulacion.html">Simulación</a></li>
                         <li><a class="dropdown-item" href="./pages/soporte.html">Soporte técnico</a></li>
@@ -66,7 +66,7 @@
             <section class="banner__image">
                 <div class="row">
                     <div class="col-lg">
-                        <img class="img-fluid" src="./img/Banner taichi tokyo.png" width="100%" height="100px" alt="Banner">
+                        <img class="img-fluid" src="./img/bannertaichitokyo.png" width="100%" height="100px" alt="Banner">
                         <p class="texto__banner">Somos una compañia dedicada al comercio internacional</p>
                     </div> 
                     </div>
@@ -163,7 +163,7 @@
         <div class="container__card">
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(./img/Sonoeye1.jpeg);">
+                    <div class="card__front" style="background-image: url(./img/sonoeye1.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Ecógrafos de mano, Doppler color, Modo M y Doppler pulsado.
@@ -181,7 +181,7 @@
             </div>
             <div class="card__father">
                 <div class="card">
-                    <div class="card__front" style="background-image: url(./img/ankeCT.jpeg);">
+                    <div class="card__front" style="background-image: url(./img/ankect.jpeg);">
                         <div class="bg"></div>
                         <div class="body__card__front">
                             <h1>Equipo de tomografia computarizada (TAC) 
